--- a/CarpetaHenry/Proyecto integrador/Generar contraseña.html
+++ b/CarpetaHenry/Proyecto integrador/Generar contraseña.html
@@ -14,9 +14,9 @@
 
 <h1>
  
- Henry              
+           
 
- 
+ <a href="./Home.html"> Henry </a> 
 <a href="./Home.html"> Home </a>
 <a href="./Generar contraseña.html"> Generar Contraseña </a>
 <a href="./Caja fuerte.html"> Caja Fuerte </a>
@@ -28,9 +28,51 @@
 
 </heAder>
 
+<hr />
 
+<h2>
 
+<div>
 
+Asistente de Seguridad
+
+</div>
+    
+<div>
+
+    GENERADOR DE CONTRASEÑAS PARAS USUARIOS:
+
+</div>
+
+<hr />
+
+</h2>
+   
+    <div>
+   <label for="Cantidad de caracteres deseados"> Cantidad de caracteres deseados </label>
+    <input type="number" name="Cantidad de caracteres deseados" />
+    </div>
+
+     <div>
+   <label for="¿Incluir caracteres especiales?">¿Incluir caracteres especiales? </label>
+    <input type="text" name="¿Incluir caracteres especiales?" />
+    </div>
+
+     <div>
+   <label for="¿Incluir caracteres numericos?">¿Incluir caracteres numericos? </label>
+    <input type="text" name="¿Incluir caracteres numericos?" />
+    </div>
+
+     <div>
+   <label for="¿Incluir caracteres mayúsculas?">¿Incluir caracteres mayúsculas? </label>
+    <input type="text" name="¿Incluir caracteres mayúsculas?" />
+    </div>
+
+<h3>
+
+    <button>GENERAR CONTRASEÑA</button>
+
+</h3>
 
 </body>
 </html>
