--- a/CarpetaHenry/Proyecto integrador/Home.html
+++ b/CarpetaHenry/Proyecto integrador/Home.html
@@ -19,9 +19,9 @@
 
 <h1>
  
- Henry              
+             
 
- 
+<a href="./Home.html"> Henry </a> 
 <a href="./Home.html"> Home </a>
 <a href="./Generar contraseña.html"> Generar Contraseña </a>
 <a href="./Caja fuerte.html"> Caja Fuerte </a>
@@ -47,7 +47,7 @@
         <P>Henry Security SAS</P>
     </div>
 
-
+<hr />
 
     <P>Protejemos tus datos, impulsamos tu confianza.</P>
 
