Iniciando diseno css

--- a/CarpetaHenry/index.html
+++ b/CarpetaHenry/index.html
@@ -3,34 +3,55 @@
 <head>
     <meta charset="UTF-8" />
     <title>Mi pagina web</title>
-
+    <link rel="stylesheet" type="text/css" href="./Style.css" />
+    <link rel="stylesheet" href="./reset.css">
 </head>
 
 <body>
 
     <header>
+<div id="Titulo">
 
-<h1>Este es el titulo principal de mi pagina web</h1>
+<h1 class="title" id="principal">Este es el titulo principal de mi pagina web</h1>
 
-<span>Home</spam>
-<span>Home</spam>
-<span>Home</spam>
+<div id="container">
 
-    </header>
+    <div>
+    <h3 class="cuadroseleccion"> Home </h3> 
+    </div>
+    <div>
+        <h3 class="cuadroseleccion"> Home </h3> 
+        </div>
+        <div>
+            <h3 class="cuadroseleccion"> Home </h3> 
+        </div>
+            
+                
+            </div>
+
+<h2>
+
+            </header>
 
 <main>
+<div class="card">
 
-    <img src="./133762867927218244.jpg" />
+  <img src="./Cuerpo.jpg" class="logo"/>
 
- <section>
+</div>
+  </h2>
+
+<section>
     <article>
-<h2>Este es el titulo de una seccion de noticia</h2>
+<h2 class="title">Este es el titulo de una seccion de noticia</h2>
 
-<h3>Esta es la noticia numero 1</h3>
+<h3 class="title">Esta es la noticia numero 1</h3>
+</article>
 
+<article>
 <div>
 
-<p>Este sera el primer parrafo de mi noticia y sera una noticia muy iomportante</p>
+<p class="mitexto">Este sera el primer parrafo de mi noticia y sera una noticia muy importante</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse dolorem eligendi quae dolores earum, minima 
     eos asperiores rem saepe iure officiis nesciunt, ipsam maxime, a neque explicabo distinctio 
     nihil placeat!</p>
@@ -39,11 +60,12 @@
 
 </article>
 
+
 <hr />
 
 <article>
 
-<h3>Este es la noticia NUMERO </h3>
+<h3 class="title">Este es la noticia NUMERO </h3>
 <p>Este es un listado de cosas importantes para esta noticia</p>
 
 <ol>
@@ -57,7 +79,7 @@
 </article>
 
 <article>
-<H3> Esta es la lista numero 3</H3>
+<H3 class="title"> Esta es la lista numero 3</H3>
 <p>Este es un listado de cosas importantes no ordenadas</p>
 
 <ul>
