--- a/CarpetaHenry/index.html
+++ b/CarpetaHenry/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>Mi pagina web</title>
-    <link rel="stylesheet" type="text/css" href="./Style.css" />
     <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" type="text/css" href="./Proyecto integrador/index.css" />
+    
 </head>
 
 <body>
